# kuka_lra

./: README.md
kuka_description/: CMakeLists.txt  package.xml
kuka_description/config/rviz/: kuka_world.rviz
kuka_description/launch/: joint_position_control.launch  training_table.launch
kuka_description/urdf/: common.gazebo.xacro  kr4r600.xacro  kr4r600_macro.urdf.xacro  kr4r600_macro.xacro  kuka.gazebo.xacro  kuka.transmission.xacro  kuka_kr4r600_macro.xacro  table.urdf.xacro  training_table.urdf.xacro
kuka_gazebo/: CMakeLists.txt  package.xml
kuka_gazebo/controller/: arm_controller_kuka.yaml
kuka_gazebo/launch/: controller_utils.launch  demo.launch  kuka_gazebo.launch
kuka_gazebo/worlds/: bottle_world
kuka_kr4_moveit/: .setup_assistant  package.xml
kuka_kr4_moveit/config/: fake_controllers.yaml  kuka_kr4r600.srdf  ompl_planning.yaml
kuka_kr4_moveit/launch/: demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  kuka_kr4r600_moveit_controller_manager.launch.xml  move_group.launch  planning_context.launch  ros_controllers.launch  trajectory_execution.launch.xml
