<?xml version="1.0"?>
<package format="2">
  <name>kuka_description</name>
  <version>0.0.0</version>
  <description>The kuka_description package</description>

  <maintainer email="aioikono@pme.duth.gr"> Katerina Oikonomou</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>kuka_kr4_moveit</depend>
  <depend>kuka_kr4_support</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
